# fleet-mem

./: .dockerignore  .env.example  .gitignore  =4.0.0  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml  roadmap.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  custom-embedding-providers.md
fleet_mem/: __init__.py  __main__.py  cli.py  config.py  indexer.py  observability.py  server.py  stats_server.py
fleet_mem/embedding/: __init__.py  base.py  ollama_embed.py  openai_compat.py
fleet_mem/fleet/: branch_index.py  cross_agent.py  lock_registry.py  merge_impact.py  sessions.py  stats.py
fleet_mem/memory/: embedder.py  engine.py
fleet_mem/monitor/: __init__.py  app.py  client.py
fleet_mem/splitter/: text_splitter.py
fleet_mem/sync/: __init__.py  background.py  reconciler.py  synchronizer.py  watcher.py
fleet_mem/vectordb/: __init__.py  base.py  chromadb_store.py  errors.py
issues/: BUG-001-monitor-empty-tabs.md  ISSUE-002-sync-canonical-changes.md
scripts/: docker-setup.sh  embed-existing-nodes.py  import-flat-files.py  index-all.sh  index-repos.sh  install.sh  setup.sh
src/: __main__.py  config.py  indexer.py  observability.py  server.py
src/embedding/: __init__.py  base.py  cache.py  ollama_embed.py  openai_compat.py
src/fleet/: branch_index.py  lock_registry.py  merge_impact.py  stats.py
src/memory/: embedder.py
src/splitter/: ast_splitter.py  file_scanner.py  text_splitter.py
src/sync/: __init__.py  background.py  merkle.py  reconciler.py  synchronizer.py
src/vectordb/: __init__.py  base.py  chromadb_store.py  types.py
tests/: test_ast_splitter.py  test_async_embedding.py  test_background.py  test_branch_index.py  test_cache.py  test_chromadb_store.py  test_chunk_cap.py  test_config.py  test_cross_agent.py  test_embedder.py  test_embedding_cache.py  test_engine.py  test_file_scanner.py  test_fleet_stats.py  test_index_files.py  test_indexer.py  test_lock_registry.py  test_memory.py  test_merge_impact.py  test_merkle.py  test_observability.py  test_ollama_embed.py  test_openai_compat.py  test_reconciler.py  test_server.py  test_sessions.py  test_synchronizer.py  test_text_splitter.py  test_watcher.py
