[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-mem"
version = "0.8.1"
description = "Shared code intelligence for agent fleets — AST-aware semantic search + multi-agent memory with git-concurrent coordination"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0"}
keywords = ["mcp", "agent-memory", "code-search", "multi-agent", "semantic-search", "tree-sitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.5.0",
    "ollama>=0.3.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "python-dotenv>=1.0.0",
    "xxhash>=3.4.0",
    "watchdog>=4.0.0",
    "structlog>=24.0.0",
    "opentelemetry-api>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/sam-ent/fleet-mem"
Repository = "https://github.com/sam-ent/fleet-mem"
Issues = "https://github.com/sam-ent/fleet-mem/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4.0",
]
languages = [
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
]
monitor = [
    "textual>=0.50.0",
    "httpx>=0.25.0",
]
tokenizer-aware = [
    # Optional: enable token-aware chunk-cap enforcement (issue #42).
    # The HF `tokenizers` Rust port (~5MB, no torch) lets the chunker count
    # tokens directly via the embed model's tokenizer rather than relying on
    # a char-cap approximation. Falls back to char-cap if absent or load
    # fails (e.g., offline environments without a cached tokenizer.json).
    "tokenizers>=0.15",
]

[project.scripts]
fleet-mem = "fleet_mem.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fleet_mem*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["fleet_mem"]
omit = [
    "fleet_mem/__main__.py",
    "fleet_mem/cli.py",
    "fleet_mem/monitor/*",
    "fleet_mem/stats_server.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.$$",
]
